Ensure that more-less divs do not wrap away from their heading in click-to-edit topics

--- a/sass/ctrlo-bootstrap.scss
+++ b/sass/ctrlo-bootstrap.scss
@@ -1118,6 +1118,10 @@ small.search_term {
 
 
 /* less / more */
+/* Ensure that more-less divs to not wrap away from their heading in click-to-edit topics */
+.more-less {
+    display: inline;
+}
 
 .more-less.clipped {
     max-height: 60px;
